@@ -1,3 +1,6 @@
+[B]1.8.2[/B]
+- Fixed: Runtime being zero in some cases
+
 [B]1.8.1[/B]
 - removed unsupported languages
 
